# collab-editor

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  schemas.py  session.py
backend/app/routers/: __init__.py  sessions.py  websocket.py
backend/app/services/: __init__.py  session_store.py  yjs_sync.py
backend/tests/: conftest.py  test_integration.py  test_sessions.py  test_websocket.py
frontend/: .dockerignore  Dockerfile  Dockerfile.railway  index.html  nginx.conf  nginx.railway.conf  package-lock.json  package.json  playwright.config.ts  railway.toml  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: collaboration.spec.ts  editor.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: CodeEditor.tsx  LanguageSelector.test.tsx  LanguageSelector.tsx  OutputPanel.test.tsx  OutputPanel.tsx  ShareButton.test.tsx  ShareButton.tsx
frontend/src/hooks/: useYjs.ts
frontend/src/lib/: api.ts  executor.ts
frontend/src/test/: setup.tsx
openapi/: spec.yaml
