[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "nanoid==2.0.0",
    "pycrdt>=0.12.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.0",
    "websockets==14.1",
]
